  [Michele Simionato]
  * Changed the order of the IMTs to be by period and not lexicographic
  * Fixed the realizations extractor for scenario calculations reading
    ruptures with multiple different tectonic region types

  [Kendra Johnson]
  * Fixed a bug in disaggregation by Lon-Lat-TRT when there are multifault
    ruptures and multiple sites

  [Michele Simionato]
  * Deprecated the <area> conversion in the exposure
  * Added new loss types "area" and "number" for usage in risk calculations
  * Made the contexts immutable and fixed mutability bugs potentially
    affecting the modules akkar_bommer_2010, bindi_2011_ipe, can_shm6_inslab,
    lanzano_2019, youd_etal_2002, zhang_zhao_2005, cauzzi_faccioli_2008_swiss,
    chiou_youngs_2008_swiss campbell_bozorgnia_2014
  * Changed the disaggregation algorithm (see manual)
  * Added a view `risk_by_rup`
  * Internal: added command `oq compare med_gmv <imt>`
  * Extended extract/ruptures to extract a single rupture given the `rup_id`
  * Fixed a bug in classical_damage causing a ValueError: could not broadcast
    input array from shape (X,Y) into shape (X,)
  * Added check for missing site parameters

  [Paolo Tormene]
  * Internal: reduced the size of the gsim column in the view
    required_params_per_trt in the .rst report

  [Michele Simionato]
  * Optimized the generation of events
  * Fixed the GMFs CSV importer so that it can import exported GMFs even in
    the presence of a `custom_site_id`
  * Implemented sampling for mutex sources with grp_probability
  * Introduced `extreme_gmv` parameter in the job.ini
  * Introduced a new output "Annual Frequency of Events" and refined the command
    `oq plot event_based_mfd?`
  * Moved the minimum magnitude filtering after the rupture sampling
  * Changed the internals of rupture sampling and fixed the generated MFD
    in the case of a same source appearing in multiple logic tree branches