@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed the damage state header in the aggrisk outputs
   * Changed the order of the IMTs to be by period and not lexicographic
   * Fixed the realizations extractor for scenario calculations reading
     ruptures with multiple different tectonic region types
